testsuite/tests/packing/illegal_import_for_pack_prefix/incorrect/use_pack.ml
let () = Inside_pack.foo ()
